[gd_scene load_steps=4 format=3 uid="uid://denyfiea668r2"]

[ext_resource type="Script" path="res://scripts/menu_game_over.gd" id="1_7oqyb"]
[ext_resource type="FontFile" uid="uid://eno2cvxdrdvd" path="res://assets/fuentes/Kenney Blocks.ttf" id="1_plulq"]

[sub_resource type="LabelSettings" id="LabelSettings_xwsh3"]
font = ExtResource("1_plulq")
font_size = 72

[node name="MenuGameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7oqyb")

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -293.0
offset_right = 270.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
text = "Rogueroids
"
label_settings = SubResource("LabelSettings_xwsh3")

[node name="BotonDeInicio" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -96.0
offset_right = 151.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_plulq")
theme_override_font_sizes/font_size = 48
text = "Jugar"

[node name="BotonDeCompra" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = 10.0
offset_right = 149.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_plulq")
theme_override_font_sizes/font_size = 48
text = "Comprar"

[node name="BotonDeRestartPartida" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = 115.0
offset_right = 150.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_plulq")
theme_override_font_sizes/font_size = 48
text = "Restart"

[node name="BotonDeSalir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = 222.0
offset_right = 151.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_plulq")
theme_override_font_sizes/font_size = 48
text = "Salir"

[connection signal="pressed" from="BotonDeInicio" to="." method="_on_boton_de_inicio_pressed"]
[connection signal="pressed" from="BotonDeCompra" to="." method="_on_boton_de_compra_pressed"]
[connection signal="pressed" from="BotonDeRestartPartida" to="." method="_on_boton_de_restart_partida_pressed"]
[connection signal="pressed" from="BotonDeSalir" to="." method="_on_boton_de_salir_pressed"]
